# ExCore

./: pyproject.toml
excore/config/: parse.py
tests/: test_config.py
