[project]
name = "excore"
version = "0.1.1beta1"
description = "Build your own development toolkit efficiently."
authors = [{ name = "Asthestarsfalll", email = "1186454801@qq.com" }]
requires-python = ">=3.11"
readme = "README.md"
license = "MIT"
classifiers = [
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development",
    "Typing :: Typed",
    "Topic :: Utilities",
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "loguru>=0.7.2",
    "requests",
    "toml>=0.10.2",
    "tabulate",
    "tqdm",
    "rich",
    "astor",
    "typer>=0.20.0",
    "filelock>=3.20.0",
]

[project.urls]
Repository = "https://github.com/Asthestarsfalll/excore"

[project.scripts]
excore = "excore.cli.launch:app"

[dependency-groups]
dev = [
    "pre-commit",
    "black",
    "ruff",
    "pytest",
    "pytest-cov",
    "torch",
    "torchvision<0.24",
    "mypy",
    "types-toml",
    "types-tqdm",
    "types-tabulate",
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu" },
]
torchvision = [
  { index = "pytorch-cpu" },
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 100
